syntax = "proto3";

package eventpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/eventpb";

import "apppb/apppb.proto";
import "isspb/isspb.proto";
import "google/protobuf/wrappers.proto";
import "bcbpb/bcbpb.proto";
import "mempoolpb/mempoolpb.proto";
import "availabilitypb/availabilitypb.proto";
import "availabilitypb/batchdbpb/batchdbpb.proto";
import "batchfetcherpb/batchfetcherpb.proto";
import "threshcryptopb/threshcryptopb.proto";
import "pingpongpb/pingpongpb.proto";
import "checkpointpb/checkpointpb.proto";
import "checkpointpb/chkpvalidatorpb/chkpvalidatorpb.proto";
import "ordererpb/ordererpb.proto";
import "ordererpb/pprepvalidatorpb/pprepvalidatorpb.proto";
import "hasherpb/hasherpb.proto";
import "cryptopb/cryptopb.proto";
import "transportpb/transportpb.proto";
import "testerpb/testerpb.proto";

import "mir/codegen_extensions.proto";

// Event represents a state event to be injected into the state machine
message Event {
  option (mir.event_root) = true;

  string dest_module = 1 [(mir.type) = "github.com/filecoin-project/mir/stdtypes.ModuleID"];

  oneof type {
    option (mir.event_type) = true;

    // Special global event produced by the runtime itself and sent to each module on initialization.
    Init init = 2;

    // Module-specific events
            hasherpb.Event hasher          = 10;
               bcbpb.Event bcb             = 11;
           mempoolpb.Event mempool         = 12;
      availabilitypb.Event availability    = 13;
           batchdbpb.Event batch_db        = 14;
      batchfetcherpb.Event batch_fetcher   = 15;
      threshcryptopb.Event thresh_crypto   = 16;
        checkpointpb.Event checkpoint      = 17;
               isspb.Event iss             = 19;
           ordererpb.Event orderer         = 20;
            cryptopb.Event crypto          = 21;
               apppb.Event app             = 22;
         transportpb.Event transport       = 23;
     chkpvalidatorpb.Event chkp_validator  = 24;
    pprepvalidatorpb.Event pprep_valiadtor = 25;

    // Temporarily used by the Gzip event writer for inclusion of non-proto events in the proto-based event record.
    SerializedEvent serialized = 100;

    // Events for code samples
    pingpongpb.Event ping_pong = 200;

    // for unit-tests
    google.protobuf.StringValue testingString = 301;
    google.protobuf.UInt64Value testingUint   = 302;
    testerpb.Tester tester = 303;
  }
}

message Init {
  option (mir.event) = true;
}

message SerializedEvent {
  bytes data = 1;
}